<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50pt"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/gray"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calc" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/openParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/openParenthesis"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/closeParenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/closeParenthesis"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/mult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/sub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/subtraction"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/sum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/sum"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/dark_red"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <ImageButton
                android:id="@+id/erase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/dark_red"
                android:src="@drawable/ic_backspace_24"
                android:contentDescription="@string/erase"

                />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/blood_red"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

        </TableRow>

    </TableLayout>

</LinearLayout>